# twentytwenty

./: LICENSE  README.md  build.py  build.sh  main.py  pyproject.toml  twentytwenty.desktop  twentytwenty.py  twentytwenty.spec
