[project]
name = "twentytwenty"
version = "0.1.0"
description = "Cross-platform 20-20-20 Eye Break Timer"
authors = [{name = "Paul S. Schweigert"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.scripts]
twentytwenty = "twentytwenty:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
